# GainsIQ

./: .gitignore  README.md  app.py  build_and_deploy.sh  build_and_deploy_preprod.sh  build_and_deploy_prod.sh  package.json  requirements.txt
GainsIQFrontend/: app.json  package.json
analysis/: analysis.ipynb
backend/: Cargo.toml  README.md  add_username_to_weight.py  api.md  build.sh
backend/aux_lambdas/anomaly_detector/: anomaly_detector.py  anomaly_detector_test.py
backend/aux_lambdas/summary_maker/: processing_lambda.py
backend/go/: api_key_auth.go  cognito_auth.go  database.go  go.mod  go.sum  handlers.go  jwt_auth.go  main.go  main_test.go  models.go  utils.go
backend/oura_integration/: README.md
backend/oura_integration/lambdas/: check_missing.py  fetch_data.py  log_error.py  process_and_store.py  store_data.py  summary.py  validate_data.py
backend/oura_integration/step_functions/: oura_sync.json
backend/src/: analysis.rs  api_key_mapper.rs  exercises.rs  handler.rs  lib.rs  main.rs  oura.rs  requests.rs  sets.rs  utils.rs  weight.rs
backend/summary_maker/: processing_lambda.py
backend/tests/: common.rs  exercises_tests.rs  mocks.rs  pop_last_set.rs  sets_tests.rs  test_add_exercise.rs  test_get_exercise_progress.rs  test_get_exercises.rs  test_log_set.rs  weight_tests.rs
cfn_stack/: gains_iq_stack.py
doc/: GainsIQ.drawio  api.md
frontend/: .gitignore  README.md  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.js  (+15 more)
gains_iq/: gains_iq_stack.py
lambda/: backend.py  processing_lambda.py
(+47 files in other folders)
