[package]
name = "backend_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.13.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-sdk-dynamodb = "1.50.0" 
aws_lambda_events = "0.15.1"
aws-config = "*"
log = "0.4"
env_logger = "0.11.5"
chrono = "0.4"

uuid = { version = "1", features = ["v4"] }